test/libyul/yulSyntaxTests/call_literal.yul
{
    1()
}
// ----
// ParserError 9980: (7-8): Function name expected.
